--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -27,6 +27,7 @@ button {
 
 // basic style 
 .container {
+    background-color: $light-bg;
     min-height: 100vh;
     >header {
         .sidebar {
