--- a/src/app/components/invoice/invoice.component.scss
+++ b/src/app/components/invoice/invoice.component.scss
@@ -31,6 +31,7 @@ $break-3: "(min-width: 1024px)";
 // basic style 
 .container {
     .container-header{
+        align-items: center;
         .title {
             >h2 {
                 color: $grey-purple;
@@ -38,20 +39,99 @@ $break-3: "(min-width: 1024px)";
         }
         .buttons {
             .new {
+                display: flex;
+                align-items: center;
+                gap: .5rem;
+                background-color:$purple;
+                padding: .5rem;
+                border-radius: 2rem;
                 >h2 {
                     color: white;
+                }
+                .plus {
+                    width: 2.75rem;
+                    height: 2.75rem;
+                    border-radius:50%;
+                    background-color: white;
+                    display: grid;
+                    place-content: center;
+                    border-radius:50%;
+                    
+                    >img {
+                        width: 1rem;
+                    }
+                }
+                >h2 {
+                    font-size:1rem;
                 }
             }
         }
     }
     .container-section {
-      .container-text {
-          >p {
-              color: $grey-purple;
-          }
-      }  
+        .not-found {
+            .container-text {
+                text-align: center;
+                >p {
+                    color: $grey-purple;
+                }
+            } 
+        }
+        .found {
+            .invoices {
+                display: flex;
+                flex-direction: column;
+                gap: 2rem;
+                .invoice {
+                    background-color: white;
+
+                    .invoice-id {
+                        >h2 {
+                            >span {
+                                color: $grey-purple-brighter;
+                            }
+                        }
+                    }
+                    .invoice-due {
+                        >h2 {
+                            color: $grey-purple;
+                            font-weight: normal;
+                        }
+                    }
+                    .invoice-cName {
+                        >h2 {
+                            color: $grey-purple-brighter;
+                            font-weight: 500;
+                        }
+                    }
+                    .invoice-status {
+                        >h2 {
+                            position: relative;
+
+                            &:before {
+                                position: relative;
+                                content: ".";
+                                font-size:3rem;
+                            }
+                        }
+                        .paidBtn {
+                            background-color: #33d6a031;
+                            color: #33D69F;
+                        }
+                        .pendingBtn {
+                            background-color: #ff910031;
+                            color: #FF8F00;;
+                        }
+                        .draftBtn {
+                            background-color: #373b5331;
+                            color: #373B53;;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
+
 // media quary 
 @media #{$break-1} {
     .container {
@@ -59,11 +139,7 @@ $break-3: "(min-width: 1024px)";
             display : grid;
             grid-template-columns: 20% clamp(14rem, 32vw, 20rem);
             justify-content: space-between;
-            align-items: center;
-            
             padding-inline: 2rem;
-
-            margin-bottom: max(10rem, 20vh);
 
             .title {
                 >h1 {
@@ -79,6 +155,7 @@ $break-3: "(min-width: 1024px)";
                 align-items: center;
 
                 height: 100%;
+                
                 .filter {
                     display: flex;
                     align-items: center;
@@ -93,38 +170,20 @@ $break-3: "(min-width: 1024px)";
                     }
                 }
                 .new {
-                    display: flex;
-                    align-items: center;
-                    gap: .5rem;
                     height: 100%;
 
-                    background-color:$purple;
                     padding: .5rem;
                     border-radius: 2rem;
-                    .plus {
-                        width: 2.75rem;
-                        height: 2.75rem;
-                        display: grid;
-                        place-content: center;
-
-                        border-radius:50%;
-                        background-color: white;
-                        >img {
-                        width: 1rem;
-                        }
-                    }
-                    >h2 {
-                        font-size: 1rem;
-                    }
                     .for1023 {
                         display: none;
                     }
                 }
             }
         }
-
         .container-section {
             .not-found {
+                margin-top: max(10rem, 20vh);
+
                 .not-found-image{
                     display: flex;
                     justify-content: center;
@@ -133,7 +192,6 @@ $break-3: "(min-width: 1024px)";
                     margin-bottom: 2rem;
                 }
                 .container-text {
-                    text-align: center;
                     >h2 {
                         font-size: clamp(1.225rem, 3vw, 1.6rem);
                         margin-bottom: 1rem;
@@ -143,7 +201,74 @@ $break-3: "(min-width: 1024px)";
                     }
                 }
             }
+            .found {
+                margin-top: 2rem;
+                display: flex;
+                justify-content: center;
+                .invoices {
+                    width: 90%;
+                    .invoice {
+                        width: 100%;
+                        padding: 2rem;
+                        border-radius: 1rem;
+                        box-shadow: 0px 10px 10px -10px rgba(72, 84, 159, 0.100397);
+                        display: grid;
+                        grid-template-areas:
+                        "id cName"
+                        "due status"
+                        "total status"
+                        ;
+                        gap: .5rem;
+                        
+                        .invoice-id {
+                            grid-area: id;
+                            margin-bottom: 1rem;
+                            >h2 {
+                                font-size: 1rem;
+                            }
+                        }
+                        .invoice-due {
+                            grid-area: due;
+                            >h2 {
+                                font-size: 1rem;
+                            }
+                        }
+                        .invoice-cName {
+                            grid-area: cName;
+                            display: flex;
+                            justify-content: flex-end;
+                            >h2 {
+                                font-size: 1rem;
+                            }
+                        }
+                        .invoice-total {
+                            grid-area: total;
+                            >h2 {
+                                font-size: 1.3rem;
+                            }
+                        }
+                        .invoice-status {
+                            grid-area: status;
+                            display: flex;
+                            justify-content: flex-end;
+                            >h2 {
+                                width: 10rem;
+                                height: 4rem;
+                                text-align: center;
+                                font-size: 1.2rem;
+                                border-radius: 1rem;
+                            }
+                        }
+                    }
+                }
+            }
         }
+    }
+    .for1023 {
+        display: none;
+    }
+    .for768 {
+        display: none;
     }
 }
 @media #{$break-2} {
@@ -160,6 +285,40 @@ $break-3: "(min-width: 1024px)";
                 }
             }
         }
+        .container-section {
+            .found {
+                .invoices {
+                    .invoice {
+                        display: flex;
+                        align-items: center;
+
+                        .invoice-id {
+                            margin: 0;
+                            width: 6rem;
+                            >h2 {
+                                font-size:clamp(.8rem, 1.5vw ,1rem)
+                            }
+                        }
+                        .invoice-due {
+                            width: 10rem;
+                        }
+                        .invoice-cName {
+                            width: 9rem;
+                            justify-content: flex-start;
+                        }
+                        .invoice-total {
+                            width: 10rem;
+                        }
+                        .invoice-status {
+                            margin-inline-end: 1rem;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .for768 {
+        display: block;
     }
 }
 @media #{$break-3} {
@@ -172,6 +331,7 @@ $break-3: "(min-width: 1024px)";
 
         .container-header {
             display: flex;
+            justify-content: space-between;
             width: clamp(55rem, 60vw, 65rem);
 
             .title {
@@ -181,6 +341,36 @@ $break-3: "(min-width: 1024px)";
                 >h2 {
                     font-size: clamp(1rem, 1vw, 1.2rem);
                 }
+            }
+            .buttons {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                gap: 2rem;
+                align-items: center;
+                
+                .filter {
+                    display: flex;
+                    align-items: center;
+                    gap: 1rem;
+
+                    >h2 {
+                        font-size:1rem;
+                    }
+                }
+                .new {
+                    padding-inline-end: 1rem;
+                }
+            }
+        }
+        .container-section {
+            display: flex;
+            justify-content: center;
+
+            .not-found {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                margin-top: max(10rem, 20vh);
             }
         }
     }
