--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -142,7 +142,10 @@ button {
         
         >header {
             width: 6rem;
-            min-height: 100%;
+            height: 100vh;
+            position:sticky;
+            top: 0;
+            left: 0;
             .sidebar {
                 min-height: 100%;
                 flex-direction: column;
