--- a/src/app/components/invoice/invoice.component.scss
+++ b/src/app/components/invoice/invoice.component.scss
@@ -55,6 +55,7 @@ $break-3: "(min-width: 1024px)";
                     flex-direction: column;
                     justify-content: space-between;
                     z-index: 1;
+                    
                     cursor: pointer;
 
                     >label {
@@ -107,6 +108,7 @@ $break-3: "(min-width: 1024px)";
                         }
                     }
                 }
+                
             }
             .new {
                 display: flex;
@@ -153,7 +155,9 @@ $break-3: "(min-width: 1024px)";
                 gap: 2rem;
                 .invoice {
                     background-color: white;
-
+                    box-shadow: 0px 10px 10px -10px rgba(72, 84, 159, 0.100397);
+                    border-radius: 1rem;
+                    padding: 2rem;
                     .invoice-id {
                         >h2 {
                             >span {
@@ -203,6 +207,14 @@ $break-3: "(min-width: 1024px)";
 }
 .none {
     display: none;
+}
+.cancelFilter {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
 
 // media quary 
@@ -289,9 +301,6 @@ $break-3: "(min-width: 1024px)";
                     width: 90%;
                     .invoice {
                         width: 100%;
-                        padding: 2rem;
-                        border-radius: 1rem;
-                        box-shadow: 0px 10px 10px -10px rgba(72, 84, 159, 0.100397);
                         display: grid;
                         grid-template-areas:
                         "id cName"
@@ -493,6 +502,44 @@ $break-3: "(min-width: 1024px)";
                 flex-direction: column;
                 align-items: center;
                 margin-top: max(10rem, 20vh);
+            }
+            .found {
+                width: 100%;
+                .invoices {
+                    .invoice {
+                        display: flex;
+                        gap: clamp(0rem, .4vw, 1rem);
+                        align-items: center;
+
+                        .invoice-id {
+                            width: clamp(7rem, 8vw, 9rem);
+                            font-size: .8rem;
+                        }
+                        .invoice-due {
+                            width: clamp(11rem, 12vw, 12rem);
+                            font-size: .8rem;
+                        }
+                        .invoice-cName {
+                            width: clamp(14rem, 14vw, 16rem);
+                            font-size: .8rem;
+                            text-align: center;
+                        }
+                        .invoice-total {
+                            width: clamp(9rem, 10vw, 10rem);
+                            font-size: .9rem;
+                        }
+                        .invoice-status {
+                            width: clamp(7rem, 8vw, 9rem);
+                            text-align: center;
+                            margin-inline-end: 2rem;
+                            >h2 {
+                                padding-block: clamp(1rem, 2vw, 1.2rem);
+                                font-size: clamp(1rem, 1vw, 1.2rem);
+                                border-radius: 1rem;
+                            }
+                        }
+                    }
+                }
             }
         }
     }
